--- a/styles/proposition.module.scss
+++ b/styles/proposition.module.scss
@@ -313,6 +313,7 @@
     display: inline;
     transform: translateX(.25rem);
   //  padding-top:4.375rem;
+
   //background-color: red;
  //   padding-left: 2px;
    // transform: rotate(0.5deg);
@@ -468,6 +469,7 @@
     padding-left: .425rem;
     align-items: center;
     padding-top: 1.5rem;
+    gap:2.375rem;
 }
 .bottomSubtextContainer {
     width: 100%;
@@ -530,7 +532,7 @@
 }
 @media (max-width: 390px) {
   
- 
+    // 1. Learn
     .propositionTopContent {
         display: flex;
         width: 100%;
@@ -612,7 +614,7 @@
         font-family: Helvetica Neue;
       //  font-size: 45.5px;
 
-        font-size: clamp(1.5rem, 8vw, 2.84rem);
+        font-size: clamp(1.5rem, 8.325vw, 2.85rem);
         font-style: normal;
       //  padding-bottom: .7rem;
       //  border-bottom: 3px solid #E3A77C;
@@ -687,7 +689,7 @@
         letter-spacing: -0.25px;
     
     }
-    // mid
+    // 2. advance
     .midWrapper {
         width:100%;
         margin-top:2rem;
@@ -811,6 +813,7 @@
         width: 100%;
 
         display: inline;
+      
         transform: translateX(0);
     //  padding-top:4.375rem;
     //background-color: red;
@@ -841,5 +844,260 @@
         &:nth-of-type(3) {
             width: 33%;
         }
+    }
+
+    // 3. excel
+    .propositionBottomWrapper {
+        height: 100%;
+
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        padding-top: 0rem;
+      //  background-color: rgba(255, 0, 0, 0.161);
+    }
+    .propositionBottomContent {
+        display:flex;
+        flex-direction: column;
+        width: 100%;
+    //    background-color: rgba(128, 0, 128, 0.184);
+        height: fit-content;
+
+    }
+    .bottomContentLeft {
+        width:100%;
+        height: fit-content;
+        display: flex;
+
+        //align-items: center;
+       // justify-content: center;
+       padding-top: 3.25vh;
+       padding-left: 2rem;
+
+      //  background-color: rgba(128, 81, 0, 0.484);
+    }
+    .bottomContentContext {
+        display:flex;
+      //  background-color: red;
+        width: 100%;
+        height: fit-content;
+        flex-direction: column;
+      //  background-color: rgba(0, 58, 128, 0.284);
+    }
+    .bottomPropositionIcon {
+        border-radius: 12.478px;
+        border: 4.159px solid #ACABFB;
+        width: 37.5px;
+        height: 37.5px;
+        flex-shrink: 0;
+        background: #7978F8;
+        color: #252525;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 2px;
+        font-family: Helvetica Neue;
+        font-size: 0.974875rem;
+        //font-size: 15.598px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 121.98%; /* 19.026px */
+        letter-spacing: -0.468px;
+        padding-top: 1px;
+        transform: translateX(.45rem) translateY(.2rem);
+    }
+    .bottomIconText {
+        color: #7978F8;
+        font-family: Helvetica Neue;
+       // font-size: 18.75px;
+        font-size: 1.171875rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 121.98%; /* 22.871px */
+        letter-spacing: -0.562px;
+        text-transform: uppercase;
+        transform: translateX(.45rem) translateY(.2rem);
+    }
+    .bottomTitleContainer {
+        min-width: fit-content;
+        display: flex;
+
+        padding-left: .425rem;
+  
+        align-items: center;
+        gap:2rem;
+        padding-top: 1.5rem;
+    }
+    .bottomTitleWrapper {
+
+    }
+    .subsectionSubtextSmall {
+        font-size: clamp(1.125rem, 3vw, 1.625rem);
+    }
+    .bottomSubtextContainer {
+        width: 100%;
+        
+        display: inline;
+
+        padding-left: .125rem;
+        padding-top: 2rem;
+        font-size: clamp(1.125rem, 3vw, 1.625rem);
+    }
+    .bottomContentRight {
+        width:88%;
+        margin-left: auto;
+        margin-right: auto;
+       // background-color: red;
+        margin-top: 2rem;
+        min-height: 15rem;
+        max-height: 15rem;
+    }
+    .bottomRightImage {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        border-radius: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     //   outline: 1px dashed #FAF3D6;
+        background-color: #252525;
+        background-size: cover;
+        box-shadow: 0px 4px 8px 0px rgba(0,0,0,.2);
+     //   filter: drop-shadow(0px 4px 4px rgba(0,0,0,.15));
+        background-repeat: no-repeat;
+        object-fit: cover;
+        background-position: center;
+        
+    }
+    .caseStudiesButton {
+        width: fit-content;
+        height:3rem;
+        padding-left:1.5rem;
+        padding-right: 1.5rem;
+        padding-top: .4rem;
+        padding-bottom: .4rem;
+        font-family: Helvetica Neue;
+        //font-size: 22.5px;
+        font-size: clamp(1.125rem, 4.125vw, 1.375rem);
+
+        flex-shrink: 0;
+        border-radius: 90.75px;
+        border: 2px solid #F9F9F9;
+        background: rgba(37, 37, 37, 0.42);
+        color: #FFF;
+        text-align: center;
+        font-family: Helvetica Neue;
+        //font-size: 22.5px;
+        font-style: normal;
+        font-weight: 400;
+
+        line-height: 121.98%; /* 27.445px */
+        letter-spacing: -0.675px;
+        text-transform: capitalize;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        margin-top: 2rem;
+        transform: translateY(0);
+    
+        margin-left: auto;
+        margin-right: auto;
+        transition: all .2s linear;
+    }
+    .caseStudiesButton:hover {
+        transform: scale(1.04);
+    }
+    .propositionBottomCarouselAlt {
+
+        height: fit-content;
+        align-self: center;
+        min-width: fit-content;
+
+        display: flex;
+        margin-top: 2.25rem;
+        overflow-y: hidden;
+        overflow-x: scroll;
+        align-items: center;
+        justify-content: flex-start;
+        
+        scroll-behavior:smooth;
+     
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        /* Hide scrollbar for IE, Edge and Firefox */
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+        
+        /* Prevent scrollbar space */
+        overflow: -moz-scrollbars-none; /* Older Firefox */
+       // transform: translateX(-33.33%);
+      
+ 
+    }
+
+    .bottomCarouselItem {
+        width: 33.33%;
+        scroll-snap-align: start;
+        min-width: 33.33%;
+        height: 100%;
+
+        align-self: center;
+        flex: 0 0 33.33%; 
+        display: flex;
+        flex-direction: column;
+
+      //  background-color: red;
+        align-items: center;
+      
+        justify-content: center;
+    }
+    .bottomCarouselImage {
+        height: 8.5rem;
+        width: 88%;
+        margin-left: auto;
+        margin-right: auto;
+
+      
+        display: flex;
+        align-items: center;
+        border-radius: 26px;
+        transform: scale(.975);
+        justify-content: center;
+        background-color: #252525;
+        border: 1px solid #FAF3D6;
+    }
+    .bottomCarouselText {
+        color: #FAF3D6;
+        font-family: Helvetica Neue;
+       // font-size: 26.25px;
+        font-size: 1.625rem;
+        font-style: normal;
+
+        font-weight: 500;
+        font-size: clamp(1rem, 3vw, 1.625rem);
+        line-height: 122%; /* 32.02px */
+        letter-spacing: -0.5px;
+        text-align: center;
+    }
+    .bottomCarouselSubtext {
+        color: #FAF3D6;
+        font-family: Helvetica Neue;
+       // font-size: 18.75px;
+       font-size: clamp(1rem, 3vw, 1.175rem);
+    
+        font-style: normal;
+        font-weight: 300;
+        text-align: center;
+        line-height: 124%; /* 22.646px */
+     //   letter-spacing: -0.562px;
     }
 }
