--- a/styles/page.module.scss
+++ b/styles/page.module.scss
@@ -253,7 +253,7 @@
   align-items: center;
   justify-content: space-evenly;
  // padding-top: 4px;
-
+  
   font-family: Helvetica Neue;
  // font-size: 12.5px;
   font-size: 0.78125rem;
@@ -1609,7 +1609,7 @@ padding-bottom: 5rem;
 
    }
    .contextButtonWrapper {
-    display: none;
+    display: visible;
    }
 
 
@@ -1626,7 +1626,13 @@ padding-bottom: 5rem;
     display: none;
   }
   .contextButtonContainer {
-    display:none;
+    
+  }
+  .contextLeft {
+    display: none;
+  }
+  .contextRight {
+    display: none;
   }
 
   // section 2
@@ -2127,6 +2133,7 @@ padding-bottom: 5rem;
     height:fit-content;
     width: 100%;
     display: flex;
+    padding-bottom: 1.75rem;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -2283,7 +2290,64 @@ padding-bottom: 5rem;
       background-color: #F87719;
     }
   }
-  
+  .pricingContainer {
+    min-height: fit-content;
+    width: 100%;
+    height: fit-content;
+    padding-bottom: 2rem;
+    //background: url('../public/assets/waves2.svg');
+    display: flex;
+    flex-direction: column;
+    //align-items: flex-end;
+    background-color: #1b1b1b;
+    //justify-content: flex-end;
+    background: linear-gradient(180deg, rgba(27, 27, 27, 0.91) 29.66%, rgba(0, 0, 0, 0.05) 132.71%);
+   //background-color: #1b1b1b;
+    //background-repeat: no-repeat;
+    //background-position:  100%;
+    //background-size: contain;
+    //background-image: url('../public/assets/waves2.svg');
+  }
+  .pricingForeground {
+    display: none;
+  }
+  .contextButtonContainer {
+    width: fit-content;
+    position:absolute;
+   // padding-bottom: 4px;
+    color: #FAF3D6;
+    gap:.375rem;
+    align-items: center;
+    justify-content: space-evenly;
+   // padding-top: 4px;
+    font-size: clamp(.5rem, 2vw, .78rem);
+    font-family: Helvetica Neue;
+   // font-size: 12.5px;
+ 
+    line-height: normal;
+    text-transform: uppercase;
+    flex-shrink: 0;
+    background-color: #252525;
+    display: flex;
+    font-weight: 400;
+    letter-spacing: .5px;
+    outline: .75px solid #FAF3D6;
+    transition: all .2s linear;
+  }
+  .contextPrice {
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+    padding-left:1.5rem;
+    padding-right: 1.325rem;
+    padding-top: .5rem;
+    margin-top: .5rem;
+    padding-bottom: .425rem;
+    align-self: center;
+    white-space: nowrap;
+    transform: scale(.75) translateX(-1.125rem);
+  }
+
 }
 
 
